--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
-    "mysql-connection-pool-manager": "^1.5.9",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.0"
   },
   "devDependencies": {
